# dcd_protocol

./: CMakeLists.txt  CONTRIBUTING.md  README.md  dcd.doxygen.in  docs.json  eos.doxygen.in  package.json  pipeline.jsonc  testnet.template  version.in
contracts/: CMakeLists.txt
contracts/contracts/: CMakeLists.txt
contracts/contracts/dcd.bios/: CMakeLists.txt
contracts/contracts/dcd.bios/include/dcd.bios/: dcd.bios.hpp
contracts/contracts/dcd.boot/: CMakeLists.txt
contracts/contracts/dcd.boot/include/dcd.boot/: dcd.boot.hpp
contracts/enable-kv/: README.md  enable-kv.sh
libraries/abidcd/: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  abidcd-config.cmake.in
libraries/abidcd/include/: .clang-format
libraries/abidcd/include/dcd/: abi.hpp  asset.hpp  bytes.hpp  chain_conversions.hpp  chain_types.hpp  check.hpp  convert.hpp  crypto.hpp  fixed_bytes.hpp  float.hpp  for_each_field.hpp  from_bin.hpp  from_json.hpp  from_string.hpp  map_macro.h  name.hpp  opaque.hpp  operators.hpp  reflection.hpp  ship_protocol.hpp  stream.hpp  symbol.hpp  to_bin.hpp  to_json.hpp  to_key.hpp  types.hpp  varint.hpp
libraries/abidcd/src/: abi.cpp  abidcd.cpp  abidcd.h  abidcd.hpp  abidcd_exception.hpp  abidcd_numeric.hpp  abidcd_ripemd160.hpp  crypto.cpp  fuzzer.cpp  fuzzer.hpp  key_test.cpp  reflect_test.cpp  template_test.cpp  test.cpp
libraries/abidcd/test/: tsconfig.json  webpack.config.js
libraries/abidcd/test/src/: test.ts
libraries/abidcd/tools/: CMakeLists.txt  name.cpp
libraries/dcd-vm/tools/: CMakeLists.txt  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
libraries/roddcd/: CMakeLists.txt  embedded_roddcd.cpp  roddcd.cpp  wasm_ql.cpp
libraries/roddcd/include/b1/roddcd/: constants.hpp  embedded_roddcd.h  embedded_roddcd.hpp  filter.hpp  get_state_row.hpp  roddcd.hpp  roddcd_tables.hpp  wasm_ql.hpp
libraries/roddcd/include/b1/roddcd/callbacks/: action.hpp  basic.hpp  chaindb.hpp  compiler_builtins.hpp  console.hpp  filter.hpp  kv.hpp  memory.hpp  query.hpp  unimplemented.hpp  unimplemented_filter.hpp  vm_types.hpp
libraries/roddcd/include/dcd/: datastream.hpp  key_value.hpp
libraries/rodeos/: CMakeLists.txt  embedded_rodeos.cpp  rodeos.cpp  wasm_ql.cpp
libraries/rodeos/include/b1/rodeos/: constants.hpp  filter.hpp  get_state_row.hpp  rodeos.hpp  rodeos_tables.hpp  wasm_ql.hpp
libraries/rodeos/include/b1/rodeos/callbacks/: action.hpp  basic.hpp  chaindb.hpp  console.hpp  filter.hpp  kv.hpp  memory.hpp  query.hpp  unimplemented.hpp  vm_types.hpp
libraries/rodeos/include/dcd/: datastream.hpp
libraries/state_history/: CMakeLists.txt  abi.cpp  create_deltas.cpp  log.cpp  transaction_trace_cache.cpp
libraries/state_history/include/dcd/state_history/: compression.hpp  create_deltas.hpp  log.hpp  rocksdb_receiver.hpp  serialization.hpp  trace_converter.hpp  transaction_trace_cache.hpp  types.hpp
libraries/state_history/include/eosio/state_history/: serialization.hpp
plugins/chain_plugin/: CMakeLists.txt  account_query_db.cpp  chain_plugin.cpp
plugins/chain_plugin/include/dcd/chain_plugin/: account_query_db.hpp  blockvault_sync_strategy.hpp  chain_plugin.hpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/chain_plugin/test/: CMakeLists.txt  test_account_query_db.cpp  test_blockvault_sync_strategy.cpp  test_chain_plugin.cpp
plugins/producer_plugin/: CMakeLists.txt  pending_snapshot.cpp  producer_plugin.cpp
plugins/producer_plugin/include/dcd/producer_plugin/: pending_snapshot.hpp  producer_plugin.hpp
plugins/producer_plugin/include/eosio/producer_plugin/: producer_plugin.hpp
plugins/producer_plugin/test/: CMakeLists.txt  test_snapshot_information.cpp  test_subjective_billing.cpp
programs/roddcd/: .clang-format  CMakeLists.txt  cloner_plugin.cpp  config.hpp.in  main.cpp  rocksdb_plugin.cpp  ship_client.hpp  streamer_plugin.cpp  wasm_ql_http.cpp  wasm_ql_http.hpp  wasm_ql_plugin.cpp
programs/roddcd/streams/: logger.hpp
programs/roddcd/tests/: CMakeLists.txt  test_roddcd_cli.cpp
system_contracts/: CMakeLists.txt
system_contracts/contracts/: CMakeLists.txt
system_contracts/contracts/dcd.bios/: CMakeLists.txt
system_contracts/contracts/dcd.bios/include/dcd.bios/: dcd.bios.hpp
system_contracts/contracts/dcd.bios/src/: dcd.bios.cpp
system_contracts/contracts/dcd.boot/: CMakeLists.txt
system_contracts/contracts/dcd.boot/bin_/: dcd.boot.abi  dcd.boot.wasm
system_contracts/contracts/dcd.boot/include/dcd.boot/: dcd.boot.hpp
system_contracts/contracts/dcd.boot/src/: dcd.boot.cpp
system_contracts/contracts/dcd.msig/: CMakeLists.txt
system_contracts/contracts/dcd.msig/include/dcd.msig/: dcd.msig.hpp
system_contracts/contracts/dcd.msig/src/: dcd.msig.cpp
system_contracts/contracts/dcd.system/: CMakeLists.txt
system_contracts/contracts/dcd.system/include/dcd.system/: commission.hpp  dcd.system.hpp  exchange_state.hpp  native.hpp  powerup.results.hpp  rex.results.hpp
system_contracts/contracts/dcd.system/ricardian/: dcd.system.contracts.md.in
system_contracts/contracts/dcd.system/src/: commission.cpp  dcd.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  name_bidding.cpp  native.cpp  powerup.cpp  powerup.results.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  voting.cpp
system_contracts/contracts/dcd.token/: CMakeLists.txt
system_contracts/contracts/dcd.token/include/dcd.token/: dcd.token.hpp
system_contracts/contracts/dcd.token/src/: dcd.token.cpp
system_contracts/contracts/dcd.wrap/: CMakeLists.txt
system_contracts/contracts/dcd.wrap/include/dcd.wrap/: dcd.wrap.hpp
system_contracts/contracts/dcd.wrap/src/: dcd.wrap.cpp
system_contracts/contracts/eosio.bios/include/eosio.bios/: eosio.bios.hpp
system_contracts/contracts/eosio.bios/src/: eosio.bios.cpp
system_contracts/contracts/eosio.boot/: CMakeLists.txt
system_contracts/contracts/eosio.system/include/eosio.system/: eosio.system.hpp  native.hpp
system_contracts/contracts/eosio.system/src/: delegate_bandwidth.cpp  eosio.system.cpp  powerup.cpp  producer_pay.cpp  rex.cpp  voting.cpp
(+1687 files in other folders)
